syntax = "proto3";

package PaymentPackage;

service PaymentService {
    rpc createPayment(UserId) returns (PaymentURL) {}
    rpc acceptPayment(UserId) returns (UserProduct) {}
}

message UserId {
    string id = 1;
}

message PaymentURL {
    string paymentURL = 1;
}

message User {
    string id = 1;
    string userName = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    string image = 6;
    bool verify = 7;
    bool ban = 8;
}

message Product {
    string id = 1;
    string name = 2;
    float price = 3;
    int32 stock = 4;
    bool disabled = 5;
    string platform = 6;
    float score = 7;
    string distributor = 8;
    string developer = 9;
    repeated string genre = 10;
    string description = 11;
    string trailer = 12;
    string mainImage = 13;
    repeated string images = 14;
    int32 amount = 15;
    float discount = 16;
}

message UserProduct {
    string id = 1;
    string userId = 2;
    int32 total = 3;
    repeated Product products = 4;
    bool isPaid = 5;
}
